# Lily

./: CMakeLists.txt  MyApp.cpp  MyApp.h  README.md  main.cpp  vk_logs.txt
assets/shaders/: shader.frag  shader.vert
framework/inc/Commands/: Commands.h
framework/inc/Commands/utils/: vk_command_X_utils.h
framework/inc/Device/: Device.h
framework/inc/Device/utils/: vk_instance_and_device_utils.h
framework/inc/Renderer/: RenderPass.h  Renderer.h
framework/inc/Renderer/utils/: vk_render_X_utils.h  vk_swapchain_utils.h
framework/inc/Resources/: Buffer.h  Image.h  asset_folder.h  asset_folder.h.in  asset_utils.h  stb_image.h  stb_image.h.in
framework/inc/Resources/Buffer/: UniformBuffer.h  VertexBuffer.h
framework/inc/Resources/Image/: Texture2D.h  texture_util.h
framework/inc/Resources/utils/: depth_util.h  vk_buffer_util.h  vk_image_util.h
framework/inc/Shader/: Descriptor.h  Shader.h  ShaderBuilder.h
framework/inc/Shader/utils/: shader_utils.h  spirv_reflect.h  spirv_reflect.h.in  spv_reflect_util.h  vk_descriptor_util.h
framework/inc/Sync/fences/: vk_fence_utils.h
framework/inc/Sync/semaphores/: vk_semaphore_utils.h
framework/inc/Window/: App.h  WindowBase.h  plat_window.h.in  vk_render_surface.h.in
framework/inc/Window/Linux/: Window.h  vk_render_surface.h
framework/inc/Window/Windows/: Window.h
framework/inc/common/: lily_enums.h  lily_macros.h  lily_structs.h  vk_layer_and_extension_utils.h
framework/inc/glm/: CTestTestfile.cmake  cmake_install.cmake
framework/inc/vk_loader/: vk_functions_list.inl  vk_loader.h
framework/src/Commands/: Commands.cpp
framework/src/Commands/utils/: vk_command_X_utils.cpp
framework/src/Device/: Device.cpp
framework/src/Device/utils/: vk_instance_and_device_utils.cpp
framework/src/Log/Android/: Log.cpp
framework/src/Log/Linux/: Log.cpp
framework/src/Renderer/: RenderPass.cpp  Renderer.cpp
framework/src/Renderer/utils/: vk_render_X_utils.cpp  vk_swapchain_utils.cpp
framework/src/Resources/: Buffer.cpp  Image.cpp  asset_utils.cpp
framework/src/Resources/Buffer/: UniformBuffer.cpp  VertexBuffer.cpp
framework/src/Resources/Image/: Texture2D.cpp  depth_util.cpp  texture_util.cpp  vk_image_util.cpp
framework/src/Resources/utils/: vk_buffer_util.cpp
framework/src/Shader/: Descriptor.cpp  Shader.cpp  ShaderBuilder.cpp
framework/src/Shader/utils/: shader_utils.cpp  spv_reflect_util.cpp  vk_descriptor_util.cpp
framework/src/Sync/fences/: vk_fence_utils.cpp
framework/src/Sync/semaphores/: vk_semaphore_utils.cpp
framework/src/Window/: App.cpp  WindowBase.cpp
framework/src/Window/Android/: Window.cpp
framework/src/Window/Linux/: Window.cpp  vk_render_surface.cpp
framework/src/Window/Windows/: vk_render_surface.cpp
framework/src/common/: vk_layer_and_extension_utils.cpp
framework/src/vk_loader/: vk_functions.cpp  vk_loader.cpp
shaders/: shader.frag
